--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </header>
     <body class="bg-cool_gray-500 text-slate-200">
         <div class="flex justify-center max-w-sm mx-auto pt-20">
-            <img class="rounded-3xl shadow-md" src="Images\Cartoon_image2.webp">
+            <img class="rounded-3xl shadow-md" src="Images\Cartoon_image2.webp" alt="Cartoonized image of Jared with his girl and mountains in the background">
         </div>
         <h1 id="about" class="text-3xl px-20 pt-20">
             About Me
