--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </header>
     <body class="bg-cool_gray-500 text-slate-200">
         <div class="flex justify-center max-w-sm mx-auto pt-20">
-            <img class="rounded-3xl shadow-md" src="Images\Cartoon_image2.webp" alt="Cartoonized image of Jared with his girl and mountains in the background">
+            <img class="rounded-3xl shadow-md" src="Images\Cartoon_image2.webp" alt="Cartoonized image of Jared smiling with his girl and mountains in the background">
         </div>
         <h1 id="about" class="text-3xl px-20 pt-20">
             About Me
@@ -166,7 +166,7 @@
         <p class="py-4 px-20 text-left">
             Since starting my career as a market research analyst back in 2010, I've ventured into a world of entrepreneurship, launching and managing small businesses along the way. These experiences have been invaluable, and while I've since moved toward more stable work, my entrepreneurial spirit is still alive and well. I love the freedom and creativity that come with taking risks, and every project I undertake is fueled by a desire for exploration and innovation.
 
-            Today, I support myself through consulting and commission-based projects with clients. The flexibility of setting my own schedule is a great fit, yet I'm still seeking that deeper sense of purpose in my work. I'm at a crossroads, open to discovering where my next big adventure might lead.
+            Today, I support myself through consulting and projects with clients. The flexibility of setting my own schedule is a great fit, yet I'm still seeking that deeper sense of purpose in my work. I'm at a crossroads, open to discovering where my next big adventure might lead.
         </p>
         <h1 class="text-3xl px-20 pt-5">
             What Drives Me
